- On Unix, the installer now defaults to installing in the user's home
  directory when running as a non-root user
- Updated PL-SQL mode (Steve Snider)
- A single invalid file system browser coloring regular expression no
  longer stops the remaining expressions from working
- HyperSearch now respects rectangular selections
- Search bar no longer takes up the full width of the view. This saves
  some screen space
- Status bar looks somewhat better now
- The text color and style used to show the "[n lines]" string can now
  be set independently of the EOL marker color

+ Bug Fixes

- Select Open File; press Enter first; then choose a file to open. Bang,
  an error message. Now fixed
- Fixed a bug in the undo code that would occur sometimes when multiple
  removes were performed in a row
- If the splash screen was disabled, running jEdit with the -nogui and
  -nobackground command line arguments didn't work
- When using the FTP plugin, renaming a file did not reload the
  directory
- Triple-clicking on the last line of a file caused problems
- When closing a file with unsaved changes, the file will stay open if
  the save failed. Previously it would be closed and the unsaved changes
  would be lost forever
- If 'Keep Dialog' was off, the search dialog would close, even after an
  unsuccessful HyperSearch. This was inconsistent with the bahavior for
  normal searches, where an unsuccessful match did not close the dialog
  (so you could correct the search string easier)
- One of the tips of the day referred to an invalid URL

+ API Changes

- Two methods added to jEdit class:
  getDoubleProperty()
  setDoubleProperty()
- Removed unused TextUtilities.findMatchingBracket(Buffer buffer,
    int line, int offset, int startLine, int endLine) method
- New ViewUpdate.EDIT_PANE_CHANGED message, sent when a different edit
  pane receives focus
- EBMessage.veto(), isVetoable() methods and EBMessage.NonVetoable class
  deprecated
- Removed old text area highlighter API